Add Python modules to scipystack_pg

--- a/scipystack_pg/Dockerfile
+++ b/scipystack_pg/Dockerfile
@@ -5,4 +5,6 @@ MAINTAINER roy.seto@gmail.com
 COPY build_postgis.sh /tmp/
 RUN /tmp/build_postgis.sh && /bin/rm -f /tmp/build_postgis.sh
 
-RUN pip2 install csvkit
+RUN LD_LIBRARY_PATH=/usr/local/pgsql/lib \
+    PATH=/usr/local/pgsql/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin \
+    pip2 install csvkit psycopg2 sqlalchemy GeoAlchemy2
